# canopy-cam-model-testing

./: CMakeLists.txt  readme.md
thresholding/: hsv_segmentation.cpp  hsv_segmentation.py  hsv_segmentation_heavy.cpp  hsv_segmentation_heavy.py  lab_segmentation.cpp  lab_segmentation.py
unsupervised_ml/: k_means_clustering.cpp  k_means_clustering.py
